<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Antonio Petrella

This file is part of Card Notification Viewer

Card Notification Viewer is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Card Notification Viewer is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Card Notification Viewer.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--TODO  custom preference for integers -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_notification_threshold_default"
        android:key="pref_notification_threshold"
        android:title="@string/pref_notification_threshold_title"
        android:summary="@string/pref_notification_threshold_summary"
        android:inputType="numberDecimal"/>
    <CheckBoxPreference
        android:defaultValue="@string/pref_test_mode_default"
        android:key="pref_test_mode"
        android:title="@string/pref_test_mode_title"/>
    <Preference
        android:title="Enable Notification Service">
        <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS"/>
    </Preference>
</PreferenceScreen>
